checkpoint(CP-3B): modernize core dependencies
## CP-3B encerrado

O CP-3B modernizou as dependências centrais no gate Java 17/WildFly
26.1.3, mantendo uma única árvore Maven e as allowlists históricas da
fase 2.

Atividades concluídas: 3.6 MyBatis 3.5.19; 3.7 remoção do Log4j 1 com
ponte transitória; 3.8 Commons FileUpload 1.6.0 e Commons IO 2.19.0; 3.9
Reflections 0.10.2 com descoberta por @Validator.

Evidências do fechamento:

- 14/14 contratos HTTP aprovados em H2 2.4.240 e Oracle 19c RU 19.3;
- conjunto e ordem dos validadores aprovados no ModuleClassLoader do
WildFly;
- WAR comum:
d3866778808f442b02691e1739ca7f0e8c1e6ec1c9dea7d99e72c9505362b5b5;
- 19 bibliotecas no WAR, sem transitivas Reflections legadas ou API
SLF4J duplicada;
- rollback verificável para 28789b65964b6daf79082179893687140b84493b;
- evidência consolidada em migration/evidence/CP-3B/closure.properties.

O CI obrigatório do PR passou no run 30650580350. O próximo trabalho é a
atividade 3.11, fora deste PR.